# tumgrd

./: .gitignore  CMakeLists.txt  README.md  README_zh-CN.md  aarch64  openwrt-aarch64.cmake  openwrt-ramips.cmake  openwrt-x86_64.cmake  ramips  tidy  tumgr  x86_64
contrib/etc/config/: tumgrd
contrib/etc/init.d/: tumgrd
contrib/usr/share/luci/menu.d/: luci-app-tumgrd.json
contrib/usr/share/rpcd/acl.d/: luci-app-tumgrd.json
src/: db.c  db.h  helper.c  helper.h  ipdetect.c  ipdetect.h  main.c  reconcile.c  reconcile.h  runner.c  runner.h  try.h  tumgrd.h  ubus_if.c  ubus_if.h
